fix atk selection style on mobile

--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@
   justify-content: center;
   font-size: 3rem;
 }
-.atk-selection div label {
-  font-size: 3rem;
-}
 #navhead li{
   display: inline;
 }
